Fix z-index

--- a/src/pages/portfolio/Portfolio.module.scss
+++ b/src/pages/portfolio/Portfolio.module.scss
@@ -23,7 +23,7 @@
 
 .list {
    position: relative;
-   z-index: 9999;
+   z-index: 9998;
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-auto-rows: 250px;
@@ -32,6 +32,7 @@
    list-style: none;
 
    @include media(max, xl) {
+      z-index: 10002;
       grid-template-columns: repeat(2, 1fr);
       padding: unset;
    }
